--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-parallax": "^3.5.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
